fixed dark mode bug

--- a/src/dark-mode.css
+++ b/src/dark-mode.css
@@ -21,6 +21,9 @@ header {
 button {
 	background-color: black;
 }
+button:hover {
+	background-color: lightslategray;
+}
 input {
 	background-color: black;
 }
@@ -316,7 +319,6 @@ select {
 	height: 20px;
 	width: 20px;
 	line-height: 20px;
-	cursor: pointer;
 	border: 1px solid rgba(70, 18, 18, 0.507);
 	font-family: "Potta One", cursive;
 	box-shadow: 1px 2px 2px rgb(71, 36, 10);
@@ -371,4 +373,13 @@ select {
 	position: absolute;
 	right: 115px;
 	bottom: 5px;
+}
+.contact-logo {
+	transition: 0s;
+}
+.contact-logo:hover {
+	height: 20px;
+	width: 20px;
+	margin-bottom: -2px;
+	margin-right: -2px;
 }
